# automi_SLAM

./: CMakeLists.txt  README.md  SLAM.py  Specs  extractor.py  readme.md  specifications  specs
data/: video_dump.launch
src/: orb_feature.cpp  video_frames.cpp
